--- a/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,7 +131,7 @@ LastLevel=/Game/Levels/01_Player
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=2346.000 Y=63.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -149,7 +149,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -169,7 +169,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab2.SourcesExpanded=False
+ContentBrowserTab2.SourcesExpanded=True
 ContentBrowserTab2.Locked=False
 ContentBrowserTab2.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab2.VerticalSplitter.SlotSize1=0.750000
@@ -180,7 +180,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game
+ContentBrowserTab2.SelectedPaths=/Game/Character/Weapons
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
 ContentBrowserTab2.SelectedCollections=
@@ -190,7 +190,7 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [Directories2]
-UNR=../../../../../../Users/user/Desktop/UE_GAME/Content/
+UNR=../../../../../../Users/user/Desktop/12_UE_GAME/UE_GAME/Content/Levels
 BRUSH=../../../../../../Users/user/Desktop/UE_GAME/Content/
 FBX=../../../../../../Users/user/Desktop/UE_GAME/Content/
 FBXAnim=../../../../../../Users/user/Desktop/UE_GAME/Content/
@@ -1020,4 +1020,11 @@ SceneOutliner.TimeStamp=2021.10.21-00.54.10
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2021.10.21-00.53.59
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+Voice.TimeStamp=2021.10.21-00.54.15
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2021.10.21-00.54.05
+MovieSceneCapture.LastCompileMethod=Unknown
+
+[MRU]
+MRUItem0=/Game/Levels/01_Player
 
