--- a/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -220,7 +220,7 @@ UNR=../../../../../../Users/user/Desktop/12_UE_GAME/UE_GAME/Content/Levels
 BRUSH=../../../../../../Users/user/Desktop/UE_GAME/Content/
 FBX=../../../../../../Users/user/Desktop/UE_GAME/Content/
 FBXAnim=../../../../../../Users/user/Desktop/UE_GAME/Content/
-GenericImport=../../../../../../Users/user/Desktop/UE_GAME/Content/
+GenericImport=../../../../../../Users/user/Desktop/12_UE_GAME/UE_GAME/Content/DT_Behavior_Player.csv
 GenericExport=../../../../../../Users/user/Desktop/UE_GAME/Content/
 GenericOpen=../../../../../../Users/user/Desktop/UE_GAME/Content/
 GenericSave=../../../../../../Users/user/Desktop/UE_GAME/Content/
@@ -1050,6 +1050,20 @@ Voice.TimeStamp=2021.10.21-00.54.15
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2021.10.21-00.54.05
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2021.10.21-00.53.50
+BlueprintGraph.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2021.10.21-00.53.58
+ExternalImagePicker.LastCompileMethod=Unknown
+DataTableEditor.TimeStamp=2021.10.21-00.53.54
+DataTableEditor.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2021.10.21-00.53.48
+AnimationEditor.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2021.10.21-00.54.11
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2021.10.21-00.54.07
+PinnedCommandList.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2021.10.21-00.54.10
+SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Levels/01_Player
