--- a/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,12 +129,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/01_Player
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Weapons/Melee/BP_Melee.BP_Melee
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Weapons/Melee/BP_Melee_OneHand.BP_Melee_OneHand
-OpenAssetsAtExit=/Game/Character/Mesh/SK_Mannequin.SK_Mannequin
-OpenAssetsAtExit=/Game/Weapons/BP_Weapon.BP_Weapon
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=1920.000 Y=0.000
