--- a/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,15 +129,9 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/01_Player
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/DataTables/DT_Equip.DT_Equip
-OpenAssetsAtExit=/Game/FCharacter.FCharacter
-OpenAssetsAtExit=/Game/Weapons/Melee/BP_Melee_OneHand.BP_Melee_OneHand
+CleanShutdown=False
 OpenAssetsAtExit=/Game/ABP_Character.ABP_Character
-OpenAssetsAtExit=/Game/Notifies/ANS_Equip.ANS_Equip
-OpenAssetsAtExit=/Game/Character/Montages/OneHand/Draw_Sword_Montage.Draw_Sword_Montage
-OpenAssetsAtExit=/Game/Character/Mesh/Skel_Mannequin.Skel_Mannequin
+OpenAssetsAtExit=/Game/Character/Mesh/SK_Mannequin.SK_Mannequin
 
 [RootWindow]
 ScreenPosition=X=1920.000 Y=0.000
@@ -1194,26 +1188,26 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Action,InputSettings.Bindings.ActionMappings.OneHand,InputSettings.Bindings.ActionMappings.Avoid,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Character/Mesh/Skel_Mannequin
-MRUItem1=/Game/Interfaces/IWeapon
-MRUItem2=/Game/Character/Montages/OneHand/Draw_Sword_Montage
-MRUItem3=/Game/Notifies/ANS_Equip
-MRUItem4=/Game/Character/Montages/TwoHand/Great_Sword_Draw_Montage
-MRUItem5=/Game/ABP_Character
-MRUItem6=/Game/DataTables/DT_Equip
-MRUItem7=/Game/FCharacter
-MRUItem8=/Game/Weapons/Melee/BP_Melee_OneHand
-MRUItem9=/Game/Weapons/BP_Weapon
-MRUItem10=/Game/DataTables/DT_Behavior_Player
-MRUItem11=/Game/Player/BP_Player
-MRUItem12=/Game/Character/Mesh/SK_Mannequin
-MRUItem13=/Game/Weapons/Melee/BP_Melee
-MRUItem14=/Game/Structures/FEquip
-MRUItem15=/Game/Enumeations/EWeaponType
-MRUItem16=/Game/Character/Animations/GreatSword/Great_Sword_Draw_Montage
-MRUItem17=/Game/Character/Animations/OneHand/Draw_Sword_Montage
-MRUItem18=/Game/Character/BlendSpaces/BS_Wizard
-MRUItem19=/Game/Character/BlendSpaces/BS_TwoHand
+MRUItem0=/Game/Character/Mesh/SK_Mannequin
+MRUItem1=/Game/ABP_Character
+MRUItem2=/Game/Weapons/Melee/BP_Melee_Two_Hand
+MRUItem3=/Game/Character/Mesh/Skel_Mannequin
+MRUItem4=/Game/Interfaces/IWeapon
+MRUItem5=/Game/Character/Montages/OneHand/Draw_Sword_Montage
+MRUItem6=/Game/Notifies/ANS_Equip
+MRUItem7=/Game/Character/Montages/TwoHand/Great_Sword_Draw_Montage
+MRUItem8=/Game/DataTables/DT_Equip
+MRUItem9=/Game/FCharacter
+MRUItem10=/Game/Weapons/Melee/BP_Melee_OneHand
+MRUItem11=/Game/Weapons/BP_Weapon
+MRUItem12=/Game/DataTables/DT_Behavior_Player
+MRUItem13=/Game/Player/BP_Player
+MRUItem14=/Game/Weapons/Melee/BP_Melee
+MRUItem15=/Game/Structures/FEquip
+MRUItem16=/Game/Enumeations/EWeaponType
+MRUItem17=/Game/Character/Animations/GreatSword/Great_Sword_Draw_Montage
+MRUItem18=/Game/Character/Animations/OneHand/Draw_Sword_Montage
+MRUItem19=/Game/Character/BlendSpaces/BS_Wizard
 
 [DetailCategories]
 BP_Player_C.Default=True
@@ -1703,6 +1697,13 @@ ABP_Character_C.Default=True
 ABP_Character_C.RootMotion=True
 ABP_Character_C.Notifies=True
 ANS_Equip_C.AnimNotify=True
+BP_Melee_Two_Hand_C.Tick=True
+BP_Melee_Two_Hand_C.Default=True
+BP_Melee_Two_Hand_C.Replication=True
+BP_Melee_Two_Hand_C.Rendering=True
+BP_Melee_Two_Hand_C.Collision=True
+BP_Melee_Two_Hand_C.Actor=True
+BP_Melee_Two_Hand_C.Input=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Player/BP_Player.BP_Player=1
@@ -1732,6 +1733,7 @@ ANS_Equip_C.AnimNotify=True
 /Game/Weapons/BP_Weapon.BP_Weapon=0
 /Game/Weapons/Melee/BP_Melee_OneHand.BP_Melee_OneHand=0
 /Game/Character/Montages/TwoHand/Great_Sword_Draw_Montage.Great_Sword_Draw_Montage=0
+/Game/Weapons/Melee/BP_Melee_Two_Hand.BP_Melee_Two_Hand=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1776,6 +1778,7 @@ GameMapsSettings=True
 InputSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Player/BP_Player.BP_Player;
 
 [PluginBrowser]
@@ -1784,7 +1787,7 @@ InstalledPlugins=XRVisualization
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object="\"Object.SkeletalMeshes\" "
+Object=
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
