--- a/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,17 +129,12 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/01_Player
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Sounds/S_Stepdirt_Cue.S_Stepdirt_Cue
-OpenAssetsAtExit=/Game/BP_Sound3D.BP_Sound3D
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Weapons/Melee/BP_Melee.BP_Melee
-OpenAssetsAtExit=/Game/Weapons/Melee/BP_Melee_Fist.BP_Melee_Fist
-OpenAssetsAtExit=/Game/DataTables/DT_Action.DT_Action
-OpenAssetsAtExit=/Game/Character/Montages/OneHand/Sword_Attack_1_Montage.Sword_Attack_1_Montage
 
 [RootWindow]
 ScreenPosition=X=1920.000 Y=0.000
-WindowSize=X=1910.000 Y=1070.000
+WindowSize=X=1910.000 Y=1030.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -1070,6 +1065,10 @@ PinnedCommandList.TimeStamp=2021.10.21-00.54.07
 PinnedCommandList.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2021.10.21-00.54.10
 SequencerWidgets.LastCompileMethod=Unknown
+Cascade.TimeStamp=2021.10.21-00.53.50
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2021.10.21-00.53.55
+DistCurveEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Levels/01_Player
@@ -1202,28 +1201,30 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,
 BP_Player_C=
 BP_Sound2D_C=
 BP_Sound3D_C=
+BP_Enemy_C=
+SendDamage=PropertyWrapper.DefaultValueCategory.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Character/Montages/OneHand/Sword_Attack_1_Montage
-MRUItem1=/Game/DataTables/DT_Action
-MRUItem2=/Game/Effects/P_Lightning
-MRUItem3=/Game/Effects/P_OneHandDust
-MRUItem4=/Game/Effects/P_OneHand
-MRUItem5=/Game/Weapons/Melee/BP_Melee_Fist
-MRUItem6=/Game/Weapons/Melee/BP_Melee
-MRUItem7=/Game/Sounds/S_Stepdirt_Cue
-MRUItem8=/Game/BP_Sound3D
-MRUItem9=/Game/BP_Sound2D
-MRUItem10=/Game/Sounds/S_BGM_Cue
-MRUItem11=/Game/Sounds/S_Stepdirt
-MRUItem12=/Game/Effects/P_FireStorm
-MRUItem13=/Game/Character/Mesh/SK_Mannequin
-MRUItem14=/Game/Character/Montages/Fist/Fist_Attack_2_Montage
-MRUItem15=/Game/Character/Montages/Fist/Fist_Attack_1_Montage
-MRUItem16=/Game/Notifies/AN_BeginDoAction
-MRUItem17=/Game/Notifies/ANS_EnableCombo
-MRUItem18=/Game/Notifies/AN_EndDoAction
-MRUItem19=/Game/Player/BP_Player
+MRUItem0=/Game/Weapons/Melee/BP_Melee
+MRUItem1=/Game/Character/Montages/OneHand/Sword_Attack_1_Montage
+MRUItem2=/Game/Notifies/ANS_Collision
+MRUItem3=/Game/Enemies/BP_Enemy
+MRUItem4=/Game/Player/BP_Player
+MRUItem5=/Game/Character/Montages/OneHand/Sword_Attack_2_Montage
+MRUItem6=/Game/Weapons/BP_Weapon
+MRUItem7=/Game/Effects/P_OneHand
+MRUItem8=/Game/DataTables/DT_Action
+MRUItem9=/Game/Effects/P_Lightning
+MRUItem10=/Game/Effects/P_OneHandDust
+MRUItem11=/Game/Weapons/Melee/BP_Melee_Fist
+MRUItem12=/Game/Sounds/S_Stepdirt_Cue
+MRUItem13=/Game/BP_Sound3D
+MRUItem14=/Game/BP_Sound2D
+MRUItem15=/Game/Sounds/S_BGM_Cue
+MRUItem16=/Game/Sounds/S_Stepdirt
+MRUItem17=/Game/Effects/P_FireStorm
+MRUItem18=/Game/Character/Mesh/SK_Mannequin
+MRUItem19=/Game/Character/Montages/Fist/Fist_Attack_2_Montage
 
 [DetailCategories]
 BP_Player_C.Default=True
@@ -1903,6 +1904,40 @@ SoundCue.AttenuationReverbSend=True
 SoundCue.AttenuationListenerFocus=True
 SoundCue.AttenuationPriority=True
 SoundCue.AttenuationAirAbsorption=True
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+AssetViewerSettings.Settings=True
+BP_Enemy_C.Default=True
+BP_Enemy_C.Tick=True
+BP_Enemy_C.DataTable=True
+BP_Enemy_C.Character=True
+BP_Enemy_C.Camera=True
+BP_Enemy_C.Pawn=True
+BP_Enemy_C.Replication=True
+BP_Enemy_C.Rendering=True
+BP_Enemy_C.Collision=True
+BP_Enemy_C.Actor=True
+BP_Enemy_C.Input=True
+ANS_Collision_C.AnimNotify=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Player/BP_Player.BP_Player=0
@@ -1956,6 +1991,9 @@ SoundCue.AttenuationAirAbsorption=True
 /Game/Effects/P_OneHand.P_OneHand=0
 /Game/Effects/P_OneHandDust.P_OneHandDust=0
 /Game/Effects/P_Lightning.P_Lightning=0
+/Game/BP_Sound3D.BP_Sound3D=0
+/Game/Sounds/S_Stepdirt_Cue.S_Stepdirt_Cue=0
+/Game/Enemies/BP_Enemy.BP_Enemy=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2013,15 +2051,15 @@ InstalledPlugins=XRVisualization
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object="\"Object.SkeletalMeshes\" "
+Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
 BP_Weapon_C=
 GetActions_7="\"Struct.NewLocalVar_0\" "
 GetActions=
 BP_Melee_C=
-BP_Player_C="\"Object.TwoHand\" "
-Character="\"Object.TwoHand\" "
-Pawn="\"Object.TwoHand\" "
+BP_Player_C=
+Character=
+Pawn=
 ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule=
@@ -2041,6 +2079,10 @@ ParticleModuleMeshRotation="\"Object.Rotation.StartRotation.Distribution\" "
 ParticleModuleRotationBase="\"Object.Rotation.StartRotation.Distribution\" "
 BP_Sound2D_C=
 BP_Sound3D_C=
+BP_Enemy_C=
+LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
