--- a/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,10 +129,9 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/01_Player
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Weapons/FireBall/BP_FireBall.BP_FireBall
-OpenAssetsAtExit=/Game/DataTables/DT_Action.DT_Action
-OpenAssetsAtExit=/Game/Character/Montages/Wizard/Wizard_Attack_1_Montage.Wizard_Attack_1_Montage
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 OpenAssetsAtExit=/Game/Weapons/BP_Weapon.BP_Weapon
 
 [RootWindow]
@@ -165,7 +164,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/DataTables
+ContentBrowserTab1.SelectedPaths=/Game/Weapons
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -185,7 +184,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game/Character/Montages/Wizard
+ContentBrowserTab2.SelectedPaths=/Game/Effects
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
 ContentBrowserTab2.SelectedCollections=
@@ -1072,6 +1071,8 @@ Cascade.TimeStamp=2021.10.21-00.53.50
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2021.10.21-00.53.55
 DistCurveEditor.LastCompileMethod=Unknown
+CurveAssetEditor.TimeStamp=2021.10.21-00.53.54
+CurveAssetEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Levels/01_Player
@@ -1192,15 +1193,15 @@ SteamVREditorSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings
 TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Action,InputSettings.Bindings.ActionMappings.OneHand,InputSettings.Bindings.ActionMappings.Avoid,InputSettings.Bindings.ActionMappings.TwoHand,InputSettings.Bindings.ActionMappings.Fist,InputSettings.Bindings.ActionMappings.FireBall,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Action,InputSettings.Bindings.ActionMappings.OneHand,InputSettings.Bindings.ActionMappings.Avoid,InputSettings.Bindings.ActionMappings.TwoHand,InputSettings.Bindings.ActionMappings.Fist,InputSettings.Bindings.ActionMappings.FireBall,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Action,InputSettings.Bindings.ActionMappings.OneHand,InputSettings.Bindings.ActionMappings.Avoid,InputSettings.Bindings.ActionMappings.TwoHand,InputSettings.Bindings.ActionMappings.Fist,InputSettings.Bindings.ActionMappings.FireBall,
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument2,K2Node_FunctionEntry.Inputs.InputArgument1,
 BP_Weapon_C=
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument2,K2Node_FunctionEntry.Inputs.InputArgument1,
 GetActions_7=PropertyWrapper.DefaultValueCategory.None,
 GetActions=PropertyWrapper.DefaultValueCategory.None,
 PlayAction=PropertyWrapper.DefaultValueCategory.None,
 PlayAction_8=PropertyWrapper.DefaultValueCategory.None,
 BP_Melee_C=PropertyWrapper.DefaultValueCategory.None,
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument2,K2Node_FunctionEntry.Inputs.InputArgument1,
 BP_Player_C=
 BP_Sound2D_C=
 BP_Sound3D_C=
@@ -1209,30 +1210,32 @@ SendDamage=PropertyWrapper.DefaultValueCategory.None,
 PlayerController=
 OnBeginOverlap=PropertyWrapper.DefaultValueCategory.None,
 OnBeginOverlap_10=PropertyWrapper.DefaultValueCategory.None,
-BP_FireBall_C=PropertyWrapper.DefaultValueCategory.None,
+BP_FireBall_C=
 Character=PropertyWrapper.DefaultValueCategory.None,
+BP_Projecttile_C=
+SpringArmComponent=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/DataTables/DT_Action
-MRUItem1=/Game/Character/Montages/Wizard/Wizard_Attack_1_Montage
-MRUItem2=/Game/Character/Mesh/SK_Mannequin
-MRUItem3=/Game/Weapons/BP_Weapon
-MRUItem4=/Game/Structures/FAction
-MRUItem5=/Game/Character/Montages/Wizard/Wizard_FireBall2_Montage
-MRUItem6=/Game/Weapons/Melee/BP_Melee
-MRUItem7=/Game/Weapons/FireBall/BP_Projecttile
-MRUItem8=/Game/Player/BP_Player
-MRUItem9=/Game/Weapons/FireBall/BP_FireBall
-MRUItem10=/Game/Character/Montages/Fist/Fist_Attack_1_Montage
-MRUItem11=/Game/Character/Montages/Fist/Fist_Attack_3_Montage
-MRUItem12=/Game/Character/Montages/Fist/Fist_Attack_2_Montage
-MRUItem13=/Game/Character/Montages/TwoHand/Great_Sword_Slash_Montage
-MRUItem14=/Game/Character/Montages/TwoHand/Great_Sword_Draw_Montage
-MRUItem15=/Game/Enemies/BP_Enemy
-MRUItem16=/Game/Weapons/Melee/BP_Melee_Fist
-MRUItem17=/Game/Character/Montages/OneHand/Sword_Attack_1_Montage
-MRUItem18=/Game/BP_GameMode
-MRUItem19=/Game/Character/Montages/Common/HitReaction_Montage
+MRUItem0=/Game/Weapons/BP_Weapon
+MRUItem1=/Game/Player/BP_Player
+MRUItem2=/Game/Weapons/FireBall/BP_FireBall
+MRUItem3=/Game/Weapons/Melee/BP_Melee_Fist
+MRUItem4=/Game/Weapons/FireBall/C_Zoom
+MRUItem5=/Game/Interfaces/IWeapon
+MRUItem6=/Game/UserInterface/WB_CrossHair
+MRUItem7=/Game/DataTables/DT_Action
+MRUItem8=/Game/Weapons/FireBall/BP_Projecttile
+MRUItem9=/Game/Effects/P_Hit_Fire
+MRUItem10=/Game/Character/Montages/Wizard/Wizard_Attack_1_Montage
+MRUItem11=/Game/Character/Mesh/SK_Mannequin
+MRUItem12=/Game/Structures/FAction
+MRUItem13=/Game/Character/Montages/Wizard/Wizard_FireBall2_Montage
+MRUItem14=/Game/Weapons/Melee/BP_Melee
+MRUItem15=/Game/Character/Montages/Fist/Fist_Attack_1_Montage
+MRUItem16=/Game/Character/Montages/Fist/Fist_Attack_3_Montage
+MRUItem17=/Game/Character/Montages/Fist/Fist_Attack_2_Montage
+MRUItem18=/Game/Character/Montages/TwoHand/Great_Sword_Slash_Montage
+MRUItem19=/Game/Character/Montages/TwoHand/Great_Sword_Draw_Montage
 
 [DetailCategories]
 BP_Player_C.Default=True
@@ -2071,6 +2074,243 @@ ProjectileMovementComponent.Events=True
 MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
 MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+BP_Projecttile_C.TransformCommon=True
+BP_Projecttile_C.Default=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+WB_CrossHair_C.Appearance=True
+WB_CrossHair_C.Input=True
+WB_CrossHair_C.Accessibility=True
+WB_CrossHair_C.Interaction=True
+WB_CrossHair_C.Behavior=True
+WB_CrossHair_C.Render Transform=True
+WB_CrossHair_C.Performance=True
+WB_CrossHair_C.Clipping=True
+WB_CrossHair_C.Navigation=True
+WB_CrossHair_C.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+WB_CrossHair_C.Designer=True
+WB_CrossHair_C.Layout=True
+K2Node_MakeStruct.PinOptions=True
+CurveEditorBakeFilter.Settings=True
+EditorSettings.DerivedData=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Import=True
+EditorPerProjectUserSettings.Export=True
+EditorPerProjectUserSettings.UnrealAutomationTool=True
+LiveCodingSettings.General=True
+LiveCodingSettings.Modules=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+SourceCodeAccessSettings.Accessor=True
+EditorExperimentalSettings.HDR=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorExperimentalSettings.Core=True
+EditorExperimentalSettings.Materials=True
+EditorExperimentalSettings.Content Browser=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Accessibility=True
+EditorStyleSettings.Colors=True
+EditorStyleSettings.Graphs=True
+EditorStyleSettings.Output Log=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.NiagaraEditor=True
+EditorKeyboardShortcutSettings.MyBlueprint=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.BlueprintLibraryPalette=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.RayTracingDebugVisualizationMenu=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MemoryProfilerCommand=True
+EditorKeyboardShortcutSettings.MeshPainter=True
+EditorKeyboardShortcutSettings.MeshPaint=True
+EditorKeyboardShortcutSettings.MeshPaintingTools=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.VisualizationMenu=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.BlueprintDebugger=True
+EditorKeyboardShortcutSettings.BlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.AnimSequenceCurveEditor=True
+EditorKeyboardShortcutSettings.AssetManagerEditorCommands=True
+EditorKeyboardShortcutSettings.LoadingProfilerCommand=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.InsightsCommands=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.BlueprintFavoritesPalette=True
+EditorKeyboardShortcutSettings.CameraShakePreviewer=True
+EditorKeyboardShortcutSettings.GenericCurveEditor=True
+EditorKeyboardShortcutSettings.CurveEditorTools=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.ClothPainterTools=True
+EditorKeyboardShortcutSettings.ClothPainter=True
+EditorKeyboardShortcutSettings.TimingProfilerCommand=True
+EditorKeyboardShortcutSettings.BlueprintPalette=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.FoliageEditMode=True
+EditorKeyboardShortcutSettings.ShowFlagsMenu=True
+EditorKeyboardShortcutSettings.StandardToolCommands=True
+EditorKeyboardShortcutSettings.FullBlueprintEditor=True
+EditorKeyboardShortcutSettings.NetworkingProfilerCommand=True
+EditorKeyboardShortcutSettings.SCSEditorViewport=True
+EditorKeyboardShortcutSettings.SteamVREditor=True
+EditorTutorialSettings.Tutorials=True
+EditorPerformanceSettings.EditorPerformance=True
+SynthesisEditorSettings.Source Effects=True
+SynthesisEditorSettings.Submix Effects=True
+VRModeSettings.General=True
+VRModeSettings.Cinematics=True
+VRModeSettings.World Movement=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.GameViewportSettings=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.Multiplayer Options=True
+LevelEditorPlaySettings.PlayOnDevice=True
+LevelEditorPlaySettings.MultiplayerOptions=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+LevelEditorMiscSettings.Screenshots=True
+OnlinePIESettings.Logins=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+GraphEditorSettings.ContextMenu=True
+SequencerSettings.Keyframing=True
+SequencerSettings.General=True
+SequencerSettings.Timeline=True
+SequencerSettings.Snapping=True
+SequencerSettings.CurveEditor=True
+SequencerSettings.Playback=True
+MaterialEditorSettings.Offline Shader Compilers=True
+MaterialEditorSettings.User Interface Domain=True
+MeshPaintSettings.Visualization=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.Experimental=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.Performance=True
+SkeletalMeshEditorSettings.AnimationPreview=True
+SpriteEditorSettings.Background=True
+PersonaOptions.Preview Scene=True
+PersonaOptions.Viewport=True
+PersonaOptions.Audio=True
+PersonaOptions.Composites and Montages=True
+PersonaOptions.Skeleton Tree=True
+PersonaOptions.Mesh=True
+PersonaOptions.Asset Browser=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+WidgetDesignerSettings.Interaction=True
+CurveEditorSettings.Curve Editor=True
+ContentBrowserSettings.ContentBrowser=True
+TileMapEditorSettings.Background=True
+TileMapEditorSettings.Grid=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+FlipbookEditorSettings.Background=True
+CrashReportsPrivacySettings.Options=True
+AnalyticsPrivacySettings.Options=True
+GameplayTagsDeveloperSettings.GameplayTags=True
+DataValidationSettings.Validation Scenarios=True
+LogVisualizerSettings.VisualLogger=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.PIE Test Maps=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+CrashReporterSettings.CrashReporter=True
+BP_Weapon_C.Cooking=True
+BP_Weapon_C.LOD=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+K2Node_Timeline.GraphNodeDetail=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.ComponentTick=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Player/BP_Player.BP_Player=0
@@ -2131,6 +2371,10 @@ MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 /Game/Character/Montages/Common/HitReaction_Montage.HitReaction_Montage=0
 /Game/Character/Montages/OneHand/Sword_Attack_1_Montage.Sword_Attack_1_Montage=0
 /Game/Weapons/FireBall/BP_Projecttile.BP_Projecttile=0
+/Game/Effects/P_Hit_Fire.P_Hit_Fire=0
+/Game/UserInterface/WB_CrossHair.WB_CrossHair=0
+/Game/Weapons/FireBall/C_Zoom.C_Zoom=0
+/Game/Weapons/FireBall/BP_FireBall.BP_FireBall=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2173,8 +2417,13 @@ GameplayTagsSettings=True
 GeneralProjectSettings=True
 GameMapsSettings=True
 InputSettings=True
+NiagaraEditorSettings=True
+NiagaraSettings=True
+EditorSettings=True
+EditorStyleSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Weapons/FireBall/BP_Projecttile.BP_Projecttile;
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
 RecentlyPlaced=/Game/Enemies/BP_Enemy.BP_Enemy;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -2191,7 +2440,7 @@ InstalledPlugins=XRVisualization
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object="\"Object.SkeletalMeshes\" "
+Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[6]\" "
 BP_Weapon_C=
 GetActions_7="\"Struct.NewLocalVar_0\" "
@@ -2219,13 +2468,20 @@ ParticleModuleMeshRotation="\"Object.Rotation.StartRotation.Distribution\" "
 ParticleModuleRotationBase="\"Object.Rotation.StartRotation.Distribution\" "
 BP_Sound2D_C=
 BP_Sound3D_C=
-BP_Enemy_C="\"Object.Replication.ReplicatedMovement\" "
+BP_Enemy_C=
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_OneHand_Shake_C="\"Object.Oscillation.LocOscillation\" \"Object.Oscillation.LocOscillation.X\" \"Object.Oscillation.LocOscillation.Y\" \"Object.Oscillation.LocOscillation.Z\" "
 MatineeCameraShake="\"Object.Oscillation.LocOscillation\" \"Object.Oscillation.LocOscillation.X\" \"Object.Oscillation.LocOscillation.Y\" \"Object.Oscillation.LocOscillation.Z\" "
 CameraShakeBase="\"Object.Oscillation.LocOscillation\" \"Object.Oscillation.LocOscillation.X\" \"Object.Oscillation.LocOscillation.Y\" \"Object.Oscillation.LocOscillation.Z\" "
+Image="\"Object.Appearance.Brush\" "
+Widget=
+Visual=
+BP_FireBall_C=
+EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
+CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
+AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2243,7 +2499,7 @@ Contexts=(Name="SkeletonEditor",Commands=)
 사용자 생성=False
 신디=False
 에디터=False
-일반=False
+일반=True
 입력=False
 최적화=False
 특수 효과=True
@@ -2318,7 +2574,7 @@ EdGraph.Graph=False
 PropertyWrapper.Variable=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
