--- a/UE_GAME/Config/DefaultInput.ini
+++ b/UE_GAME/Config/DefaultInput.ini
@@ -86,6 +86,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="FireBall",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Four)
 +ActionMappings=(ActionName="Skill",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="FireStorm",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Five)
++ActionMappings=(ActionName="Warp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Six)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
