--- a/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/UE_GAME/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,9 +130,6 @@ LastLevel=/Game/Levels/01_Player
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Enemies/BP_AI.BP_AI
-OpenAssetsAtExit=/Game/Enemies/BP_AIController.BP_AIController
-OpenAssetsAtExit=/Game/Enemies/BP_Enemy.BP_Enemy
 
 [RootWindow]
 ScreenPosition=X=1920.000 Y=0.000
@@ -164,7 +161,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Notifies
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -184,7 +181,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game/Enemies
+ContentBrowserTab2.SelectedPaths=/Game/Enemies/AI_Melee
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
 ContentBrowserTab2.SelectedCollections=
@@ -1216,28 +1213,34 @@ BP_Projecttile_C=
 SpringArmComponent=
 BP_FireStorm_C=
 BP_Warp_C=
+CharacterMovementComponent=
+BP_AIController_C=PropertyWrapper.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument2,K2Node_FunctionEntry.Inputs.InputArgument1,
+BP_AI_C=
+AI_Melee_C=PropertyWrapper.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument2,K2Node_FunctionEntry.Inputs.InputArgument1,
+BT_Service_Melee_C=
+BTTask_Action_C=PropertyWrapper.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument2,K2Node_FunctionEntry.Inputs.InputArgument1,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemies/BP_Enemy
-MRUItem1=/Game/Enemies/BP_AI
-MRUItem2=/Game/Enemies/BP_AIController
-MRUItem3=/Game/Character/Montages/Wizard/Wizard_Warp_Montage
-MRUItem4=/Game/Player/BP_Player
-MRUItem5=/Game/Weapons/BP_Warp
-MRUItem6=/Game/Weapons/BP_FireStorm
-MRUItem7=/Game/Character/Montages/Wizard/Wizard_FireStorm_Montage
-MRUItem8=/Game/Weapons/BP_Weapon
-MRUItem9=/Game/Weapons/FireBall/BP_FireBall
-MRUItem10=/Game/Weapons/Melee/BP_Melee_Fist
-MRUItem11=/Game/Weapons/FireBall/C_Zoom
-MRUItem12=/Game/Interfaces/IWeapon
-MRUItem13=/Game/UserInterface/WB_CrossHair
-MRUItem14=/Game/DataTables/DT_Action
-MRUItem15=/Game/Weapons/FireBall/BP_Projecttile
-MRUItem16=/Game/Effects/P_Hit_Fire
-MRUItem17=/Game/Character/Montages/Wizard/Wizard_Attack_1_Montage
-MRUItem18=/Game/Character/Mesh/SK_Mannequin
-MRUItem19=/Game/Structures/FAction
+MRUItem0=/Game/Enemies/AI_Melee/AI_Melee
+MRUItem1=/Game/Enemies/Task/BTTask_Hitted
+MRUItem2=/Game/Enemies/Task/BTTask_Action
+MRUItem3=/Game/Enemies/AI_Melee/BT_Service_Melee
+MRUItem4=/Game/Enemies/AI_Melee/BT_Melee
+MRUItem5=/Game/Enemies/BT_AI
+MRUItem6=/Game/Enemies/BP_Enemy
+MRUItem7=/Game/Enumeations/EBehaviorType
+MRUItem8=/Game/Enemies/BP_AIController
+MRUItem9=/Game/ABP_Character
+MRUItem10=/Game/Enemies/BP_AI
+MRUItem11=/Game/Enemies/BB_AI
+MRUItem12=/Game/Player/BP_Player
+MRUItem13=/Game/Character/Montages/Wizard/Wizard_Warp_Montage
+MRUItem14=/Game/Weapons/BP_Warp
+MRUItem15=/Game/Weapons/BP_FireStorm
+MRUItem16=/Game/Character/Montages/Wizard/Wizard_FireStorm_Montage
+MRUItem17=/Game/Weapons/BP_Weapon
+MRUItem18=/Game/Weapons/FireBall/BP_FireBall
+MRUItem19=/Game/Weapons/Melee/BP_Melee_Fist
 
 [DetailCategories]
 BP_Player_C.Default=True
@@ -2401,6 +2404,98 @@ BP_AI_C.PlanarMovement=True
 BP_AI_C.MovementComponent=True
 BP_AI_C.Shape=True
 BP_AI_C.Materials=True
+BP_AIController_C.ComponentTick=True
+BP_AIController_C.Tags=True
+BP_AIController_C.ComponentReplication=True
+BP_AIController_C.Activation=True
+BP_AIController_C.Variable=True
+BP_AIController_C.Cooking=True
+AIPerceptionComponent.Variable=True
+AIPerceptionComponent.Sockets=True
+AIPerceptionComponent.AI Perception=True
+AIPerceptionComponent.Tags=True
+AIPerceptionComponent.ComponentTick=True
+AIPerceptionComponent.ComponentReplication=True
+AIPerceptionComponent.Cooking=True
+AIPerceptionComponent.Events=True
+BehaviorTreeGraphNode_Root.AI=True
+BlackboardData.Parent=True
+BlackboardData.Key=True
+BTComposite_Sequence.Composite=True
+BTComposite_Sequence.Description=True
+BTTask_MoveTo.Node=True
+BTTask_MoveTo.Blackboard=True
+BTTask_MoveTo.Task=True
+BTTask_MoveTo.Description=True
+BTDecorator_Blackboard.FlowControl=True
+BTDecorator_Blackboard.Blackboard=True
+BTDecorator_Blackboard.Description=True
+BTTask_Wait.Wait=True
+BTTask_Wait.Task=True
+BTTask_Wait.Description=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.Replication=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Actor=True
+AI_Melee_C.Default=True
+AI_Melee_C.Tick=True
+AI_Melee_C.DataTable=True
+AI_Melee_C.Character=True
+AI_Melee_C.Camera=True
+AI_Melee_C.Pawn=True
+AI_Melee_C.Replication=True
+AI_Melee_C.Rendering=True
+AI_Melee_C.Collision=True
+AI_Melee_C.Actor=True
+AI_Melee_C.Input=True
+AI_Melee_C.TransformCommon=True
+AI_Melee_C.Animation=True
+AI_Melee_C.Mesh=True
+AI_Melee_C.Physics=True
+AI_Melee_C.Clothing=True
+AI_Melee_C.MasterPoseComponent=True
+AI_Melee_C.Lighting=True
+AI_Melee_C.ClothingSimulation=True
+AI_Melee_C.SkinWeights=True
+AI_Melee_C.Navigation=True
+AI_Melee_C.VirtualTexture=True
+AI_Melee_C.Tags=True
+AI_Melee_C.Activation=True
+AI_Melee_C.Cooking=True
+AI_Melee_C.Character Movement (General Settings)=True
+AI_Melee_C.Character Movement: Walking=True
+AI_Melee_C.Character Movement: Jumping / Falling=True
+AI_Melee_C.Character Movement (Networking)=True
+AI_Melee_C.Character Movement: Swimming=True
+AI_Melee_C.Character Movement: Flying=True
+AI_Melee_C.Character Movement: Custom Movement=True
+AI_Melee_C.Character Movement (Rotation Settings)=True
+AI_Melee_C.Character Movement: Physics Interaction=True
+AI_Melee_C.Character Movement=True
+AI_Melee_C.Character Movement: Avoidance=True
+AI_Melee_C.RootMotion=True
+AI_Melee_C.Character Movement: NavMesh Movement=True
+AI_Melee_C.NavMovement=True
+AI_Melee_C.Velocity=True
+AI_Melee_C.PlanarMovement=True
+AI_Melee_C.MovementComponent=True
+AI_Melee_C.Shape=True
+AI_Melee_C.Materials=True
+BTComposite_Selector.Composite=True
+BTComposite_Selector.Description=True
+BT_Service_Melee_C.Description=True
+BT_Service_Melee_C.Service=True
+BP_AIController_C.Default=True
+BT_Service_Melee_C.Default=True
+BTTask_Hitted_C.Task=True
+BTTask_Hitted_C.Description=True
+BTTask_Action_C.Task=True
+BTTask_Action_C.Description=True
+BTTask_Action_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Player/BP_Player.BP_Player=0
@@ -2469,7 +2564,15 @@ BP_AI_C.Materials=True
 /Game/Weapons/BP_FireStorm.BP_FireStorm=0
 /Game/Character/Montages/Wizard/Wizard_Warp_Montage.Wizard_Warp_Montage=0
 /Game/Weapons/BP_Warp.BP_Warp=0
-/Game/Enemies/BP_AI.BP_AI=1
+/Game/Enemies/BP_AI.BP_AI=0
+/Game/Enemies/BB_AI.BB_AI=0
+/Game/Enemies/BT_AI.BT_AI=0
+/Game/Enemies/BP_AIController.BP_AIController=0
+/Game/Enemies/AI_Melee/AI_Melee.AI_Melee=0
+/Game/Enemies/AI_Melee/BT_Service_Melee.BT_Service_Melee=0
+/Game/Enemies/Task/BTTask_Hitted.BTTask_Hitted=0
+/Game/Enemies/Task/BTTask_Action.BTTask_Action=0
+/Game/Enemies/AI_Melee/BT_Melee.BT_Melee=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2518,6 +2621,9 @@ EditorSettings=True
 EditorStyleSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Enemies/AI_Melee/AI_Melee.AI_Melee;
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Game/Enemies/BP_AI.BP_AI;
 RecentlyPlaced=/Game/Weapons/BP_Warp.BP_Warp;
 RecentlyPlaced=/Game/Effects/P_FireStorm.P_FireStorm;
 RecentlyPlaced=/Game/Weapons/BP_FireStorm.BP_FireStorm;
@@ -2537,7 +2643,7 @@ InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[1].KeyType\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[9]\" "
 BP_Weapon_C=
@@ -2545,8 +2651,8 @@ GetActions_7="\"Struct.NewLocalVar_0\" "
 GetActions=
 BP_Melee_C=
 BP_Player_C=
-Character="\"Object.EquipTable\" "
-Pawn="\"Object.EquipTable\" "
+Character=
+Pawn=
 ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule=
@@ -2566,7 +2672,7 @@ ParticleModuleMeshRotation="\"Object.Rotation.StartRotation.Distribution\" "
 ParticleModuleRotationBase="\"Object.Rotation.StartRotation.Distribution\" "
 BP_Sound2D_C=
 BP_Sound3D_C=
-BP_Enemy_C="\"Object.EquipTable\" "
+BP_Enemy_C=
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2582,6 +2688,27 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 BP_FireStorm_C=
 BP_Warp_C=
+AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense.DetectionByAffiliation\" "
+ActorComponent=
+BP_AIController_C=
+AIController=
+Controller=
+BP_AI_C=
+BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[1].KeyType\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
+BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+AI_Melee_C=
+BT_Service_Melee_C=
+BTService_BlueprintBase=
+BTService=
+BTAuxiliaryNode=
+BTNode=
+BTTask_Action_C=
+BTTask_BlueprintBase=
+BTTaskNode=
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2672,6 +2799,8 @@ ChangeVariableType_Warning=False
 [DetailCategoriesAdvanced]
 EdGraph.Graph=False
 PropertyWrapper.Variable=False
+CharacterMovementComponent.Character Movement: Walking=True
+BT_Service_Melee_C.Service=True
 
 [MessageLog]
 LastLogListing=PIE
